# fastapi-ci-cd

./: .bandit  .dockerignore  .flake8  ACCESS_GUIDE.md  Dockerfile  VERIFICATION_GUIDE.md  bandit-report.txt  kind-config.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: docker-publish.yml
app/: main.py
argocd/: application.yaml
charts/fastapi/: Chart.yaml  values.yaml
charts/fastapi/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
test/: test_app.py
