[tool.poetry]
name = "fastapi-ci-cd"
version = "0.1.0"
description = "Demo FastAPI CI/CD"
authors = ["Evaristo <none@evaristogz.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
flake8 = "^7.1.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.0"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
